<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_board_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="@id/guideline"/>

    <Button
        android:id="@+id/btnReplay1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_restart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view"
        android:layout_margin="12dp"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/btnReplay2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_restart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/view"
        android:layout_margin="12dp"
        android:rotation="180"
        style="?android:attr/borderlessButtonStyle"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:rotation="180"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvPlayer2">

        <ImageView
            android:id="@+id/ivSuits1_2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/suits_1"
            android:background="@drawable/ic_suits_winner" />

        <ImageView
            android:id="@+id/ivSuits2_2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/suits_2"
            android:src="@drawable/ic_diamond"/>

        <ImageView
            android:id="@+id/ivSuits3_2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/suits_3"
            android:src="@drawable/ic_heart"/>

        <ImageView
            android:id="@+id/ivSuits4_2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/suits_4"
            android:src="@drawable/ic_spade"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPlayer1">

        <ImageView
            android:id="@+id/ivSuits1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/suits_1"
            android:background="@drawable/ic_suits_winner" />

        <ImageView
            android:id="@+id/ivSuits2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/suits_2"
            android:src="@drawable/ic_diamond"/>

        <ImageView
            android:id="@+id/ivSuits3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/suits_3"
            android:src="@drawable/ic_heart"/>

        <ImageView
            android:id="@+id/ivSuits4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/suits_4"
            android:src="@drawable/ic_spade"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvPlayer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="12dp"
        android:rotation="180"
        android:text="@string/tv_player_2"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/tvPlayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="12dp"
        android:text="@string/tv_player_1"
        android:textSize="24sp"
        />


    <LinearLayout
        android:id="@+id/llPile1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvPile1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:text="@string/pile"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPile1"
            android:layout_width="111dp"
            android:layout_height="173dp"
            android:layout_gravity="end"
            app:cardCornerRadius="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:contentDescription="@string/pile"
                android:src="@drawable/backcard"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDiscard1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvDiscard1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/discarded_cards"
            android:lines="2"
            android:gravity="center"
            android:layout_margin="12dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvDiscard1"
            android:layout_width="111dp"
            android:layout_height="173dp"
            android:layout_gravity="start"
            app:cardCornerRadius="5dp">

            <ImageView
                android:id="@+id/ivDiscard1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/backcard"
                android:contentDescription="@string/discarded_cards"
                android:visibility="invisible"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDiscard2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvDiscard2"
            android:layout_width="111dp"
            android:layout_height="173dp"
            android:layout_gravity="end"
            app:cardCornerRadius="5dp">

            <ImageView
                android:id="@+id/ivDiscard2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/backcard"
                android:contentDescription="@string/discarded_cards"
                android:visibility="invisible"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvDiscard2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/discarded_cards"
            android:lines="2"
            android:gravity="center"
            android:layout_margin="12dp"
            android:rotation="180"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPile2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPile2"
            android:layout_width="111dp"
            android:layout_height="173dp"
            android:layout_gravity="start"
            app:cardCornerRadius="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:contentDescription="@string/pile"
                android:src="@drawable/backcard"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvPile2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:rotation="180"
            android:text="@string/pile"/>

    </LinearLayout>


    <ImageView
        android:id="@+id/imLayDownCard1"
        android:layout_width="133dp"
        android:layout_height="193dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/pile"/>


    <ImageView
        android:id="@+id/imLayDownCard2"
        android:scaleType="centerCrop"
        android:layout_width="133dp"
        android:layout_height="193dp"
        android:background="@color/transparent"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/pile"/>


    <TextView
        android:id="@+id/tvWinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:textSize="14sp"
        android:rotation="180"
        android:gravity="center"
        android:textColor="@color/black"
        android:visibility="gone"
        android:background="@drawable/winner_tv_shape"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:padding="15dp"/>

    <TextView
        android:id="@+id/tvWinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:textSize="14sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:background="@drawable/winner_tv_shape"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="32dp"
        android:padding="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>