...
        android:layout_marginEnd="0dp" />


    <ImageView
        android:layout_width="316dp"
        android:layout_height="237dp"
        android:layout_above="@+id/btnPlay"
        android:layout_below="@+id/tvTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="38dp"
...
        android:layout_height="90dp"
        android:text="@string/play_button"
        android:fontFamily="@font/anton"
        android:textSize="24sp"
        android:elevation="30dp"
        android:background="@drawable/button_shape"
        android:layout_above="@id/btnRules"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="13dp" />

...
