<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="300dp"
    android:layout_height="600dp"
    android:layout_margin="90dp"
    android:layout_gravity="center"
    android:background="@drawable/button_shape">

    <Button
        android:id="@+id/btnClose"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="12dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/ic_cancel"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        tools:ignore="RelativeOverlap">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rules_title"
            android:fontFamily="@font/anton"
            android:textSize="62sp"
            android:textColor="@color/black"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="32dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/rules_body"
            android:scrollbars="vertical"
            android:textSize="22sp" />
    </LinearLayout>
    </ScrollView>


</RelativeLayout>