...
            android:gravity="center"
            android:layout_marginStart="12dp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btnReplay"
        android:layout_width="263dp"
        android:layout_height="90dp"
        android:text="@string/replay"
        android:fontFamily="@font/anton"
        android:textSize="24sp"
        android:elevation="30dp"
...
